main.tf
resource "aws_key_pair" "gitlab_key" {
  key_name   = "gitlab-key"
  public_key = var.public_key
}

resource "aws_security_group" "gitlab_sg" {
  name        = "gitlab-sg"
  description = "Allow SSH, HTTP, and HTTPS for GitLab"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "All outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "gitlab-sg"
  }
}

# resource "aws_instance" "gitlab" {
#   ami                    = var.ami_id
#   instance_type          = "t3.medium"
#   key_name               = aws_key_pair.gitlab_key.key_name
#   vpc_security_group_ids = [aws_security_group.gitlab_sg.id]
#   user_data              = file("${path.module}/user_data.sh")


# root_block_device {
#   volume_size = 50  # ✅ Size in GiB
# }


#   tags = {
#     Name = "GitLab-CE"
#   }

#   lifecycle {
#     ignore_changes = [ami] # Useful for keeping fixed base image
#   }
# }
